added guardian push based mobile session

--- a/sample-webapp/views/index.ejs
+++ b/sample-webapp/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome <%= user ? user.name: "annoymous" %></p>
+    <h2>Welcome <%= user ? user.name: "annoymous" %></h2>
   </body>
 </html>
